--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "semi": false,
-  "arrowParens": "always",
-  "singleQuote": true
+  "printWidth": 100,
+  "singleQuote": true,
+  "bracketSpacing": false
 }
