Add ssl params to .env.sample

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,1 +1,4 @@
 SOCKET_PORT=3001
+SSL_KEY=/etc/letsencrypt/live/planning-poker.alexniarchos.com/privkey.pem
+SSL_CERT=/etc/letsencrypt/live/planning-poker.alexniarchos.com/cert.pem
+SSL_CA=/etc/letsencrypt/live/planning-poker.alexniarchos.com/chain.pem
