--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "sanitize-html": "^1.27.4",
     "socket.io": "^2.3.0"
   }
 }
