--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
+    "path": "^0.12.7",
     "sanitize-html": "^1.27.4",
     "socket.io": "^2.3.0"
   }
